Modify input font size to avoid zooming on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ a {
     flex-direction: column;
     align-items: center;
   }
-  
+
   .img {
     display: flex;
     align-self: center;
@@ -307,6 +307,7 @@ a {
     margin-right: 0px;
     width: 40%;
     margin-bottom: 0px;
+    font-size: 16px;
   }
 
   #myForm {
